--- a/snitch/html/index.html
+++ b/snitch/html/index.html
@@ -5,10 +5,11 @@
 		<title>Hello World!</title>
 	</head>
 	<body>
-		<h1>Hello World!</h1>
-		We are using node <script>document.write(process.versions.node)</script>,
-		Chrome <script>document.write(process.versions.chrome)</script>,
-		and Electron <script>document.write(process.versions.electron)</script>.
+
+		<ul id="logs">
+		</ul>
+
+		<div id="out"></div>
 
 		<script>
 /**
