Add some very basic styles.

--- a/snitch/html/index.html
+++ b/snitch/html/index.html
@@ -2,14 +2,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Hello World!</title>
+		<title>Snitch</title>
+		<link type="text/css" rel="stylesheet" href="../css/main.css" />
 	</head>
 	<body>
 
-		<ul id="logs">
-		</ul>
-
-		<div id="out"></div>
+		<div id="main">
+			<div id="logs-wrapper">
+				<ul id="logs"></ul>
+			</div>
+			<div id="out-wrapper">
+				<div id="out"></div>
+			</div>
+		</div>
 
 		<script>
 /**
