Load data from storage.

--- a/snitch/html/index.html
+++ b/snitch/html/index.html
@@ -10,6 +10,10 @@
 		<div id="main">
 			<div id="logs-wrapper">
 				<ul id="logs"></ul>
+				<div id="addnew">
+					<div id="target"></div>
+					<p><a href="#additem">Add</a></p>
+				</div>
 			</div>
 			<div id="out-wrapper">
 				<div id="out"></div>
