Started adding icons.

--- a/snitch/html/index.html
+++ b/snitch/html/index.html
@@ -12,7 +12,7 @@
 				<ul id="logs"></ul>
 				<div id="addnew">
 					<div id="target"></div>
-					<p><a href="#additem">Add</a></p>
+					<p class="addnew"><a href="#additem"><span>Add</span></a></p>
 				</div>
 			</div>
 			<div id="out-wrapper">
